nbproject/private/Default-build.log
g++ -o ejecutable src/logica/Reserva.cpp src/logica/Cine.cpp src/logica/Funcion.cpp src/logica/Credito.cpp src/logica/Debito.cpp src/logica/Puntaje.cpp src/logica/Tarjeta.cpp src/logica/Pelicula.cpp src/logica/Sala.cpp src/logica/Usuario.cpp src/logica/Comentario.cpp src/logica/Sistema.cpp src/datatypes/DtComentario.cpp src/datatypes/DtPuntaje.cpp src/datatypes/DtUsuario.cpp src/datatypes/DtPelicula.cpp src/datatypes/DtDebito.cpp src/datatypes/DtCine.cpp src/datatypes/DtCredito.cpp src/datatypes/DtTarjeta.cpp src/datatypes/DtFecha.cpp src/datatypes/DtFuncion.cpp src/datatypes/DtTest.cpp src/datatypes/DtSala.cpp src/datatypes/DtReserva.cpp src/manejadores/ListaDt.cpp src/manejadores/ManejadorUsuarios.cpp src/manejadores/ManejadorFunciones.cpp src/manejadores/ManejadorPeliculas.cpp src/manejadores/ManejadorCines.cpp src/Utils.cpp src/Factory.cpp main.cpp -I. 
src/datatypes/DtDebito.cpp: In member function ‘bool DtDebito::isEqual(DtDebito*)’:
src/datatypes/DtDebito.cpp:17:35: error: expected primary-expression before ‘.’ token
     return this->banco == DtDebito.getBanco(t);
                                   ^
src/datatypes/DtReserva.cpp: In member function ‘bool DtReserva::isEqual(DtReserva*)’:
src/datatypes/DtReserva.cpp:25:33: error: expected primary-expression before ‘.’ token
     return this->id == DtReserva.getID(t);
                                 ^
src/manejadores/ListaDt.cpp: In instantiation of ‘void Util::ListaDt<K, T>::add(T) [with K = int; T = DtUsuario]’:
src/manejadores/../../include/manejadores/ListaDt.h:45:26:   required from here
src/manejadores/ListaDt.cpp:6:19: error: no match for ‘operator[]’ (operand types are ‘std::map<int, DtUsuario, std::less<int>, std::allocator<std::pair<const int, DtUsuario> > >’ and ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’)
         this->_map[t.getID()] = t;
         ~~~~~~~~~~^
In file included from /usr/include/c++/6.2.1/map:61:0,
                 from src/manejadores/../../include/manejadores/ListaDt.h:3,
                 from src/manejadores/ListaDt.cpp:1:
/usr/include/c++/6.2.1/bits/stl_map.h:474:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = int; _Tp = DtUsuario; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, DtUsuario> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = DtUsuario; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = int]
       operator[](const key_type& __k)
       ^~~~~~~~
/usr/include/c++/6.2.1/bits/stl_map.h:474:7: note:   no known conversion for argument 1 from ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘const key_type& {aka const int&}’
/usr/include/c++/6.2.1/bits/stl_map.h:494:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](std::map<_Key, _Tp, _Compare, _Alloc>::key_type&&) [with _Key = int; _Tp = DtUsuario; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, DtUsuario> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = DtUsuario; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = int]
       operator[](key_type&& __k)
       ^~~~~~~~
/usr/include/c++/6.2.1/bits/stl_map.h:494:7: note:   no known conversion for argument 1 from ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘std::map<int, DtUsuario, std::less<int>, std::allocator<std::pair<const int, DtUsuario> > >::key_type&& {aka int&&}’
Makefile:10: recipe for target 'ejecutable' failed
gmake: *** [ejecutable] Error 1
